# inference

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: codegen.py
src/eugene_plexus_inference/: __init__.py  __main__.py  app.py  auth_state.py  config.py  dependencies.py  security.py  settings.py
src/eugene_plexus_inference/_generated/: models.py
src/eugene_plexus_inference/engine/: __init__.py  attention.py  block.py  chat_template.py  checkpoint.py  engine.py  generate.py  layers.py  model.py  sampling.py  tokenizer.py
src/eugene_plexus_inference/routes/: admin.py  config.py  health.py  inference.py
tests/: conftest.py  test_auth.py  test_chat_template.py  test_config.py  test_engine.py  test_health.py  test_inference_routes.py  test_safe_mode.py  test_sampling.py
