[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eugene-plexus-inference"
version = "0.1.0"
description = "Local model serving with OpenAI-compatible chat/completions endpoints for Eugene Plexus. v0.3 skeleton ships the control-plane wire shape; the serving engine is future work."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Eugene Plexus contributors" },
]
keywords = ["eugene-plexus", "inference", "fastapi", "llm", "serving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    "pyjwt>=2.9,<3",
    # Serving deps. Imported lazily by the engine so the control plane (config,
    # health, endpoint listing) boots even if they're absent; a load/chat then
    # fails with a clear error. CI installs the CPU-only torch wheel.
    "torch>=2.4",
    "tokenizers>=0.20,<1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    "httpx>=0.27,<1",          # for FastAPI test client
    "ruff==0.15.14",
    "mypy==1.20.2",
    "types-pyyaml>=6,<7",
    "datamodel-code-generator==0.57.0",
]

[project.scripts]
eugene-plexus-inference = "eugene_plexus_inference.__main__:main"

[project.urls]
Homepage = "https://github.com/eugene-plexus"
Repository = "https://github.com/eugene-plexus/inference"
Specs = "https://github.com/eugene-plexus/specs"

[tool.hatch.build.targets.wheel]
packages = ["src/eugene_plexus_inference"]

# -----------------------------------------------------------------------------
# Ruff (linter + formatter)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "src/eugene_plexus_inference/_generated",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "ASYNC",         # async-correctness
    "SIM",           # simplifications
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
# FastAPI uses Depends() as an argument default, which is the framework's
# idiom for dependency injection but trips ruff's "no function calls in
# defaults" rule. Allow it only in the dependency module that defines them.
"src/eugene_plexus_inference/dependencies.py" = ["B008"]
# Same FastAPI-idiom story: Query() in argument defaults.
"src/eugene_plexus_inference/routes/inference.py" = ["B008"]

# -----------------------------------------------------------------------------
# Mypy
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
# call-arg is disabled because mypy doesn't recognize pydantic's
# `field: T = Field(default, ...)` defaults — every optional codegen'd
# Pydantic field is reported as missing at the call site otherwise. We
# keep call-arg's mistype-detection role through ruff.
disable_error_code = ["call-arg"]
warn_unused_configs = true
warn_unused_ignores = true
# torch types nn.Module.__call__ (and much else) as returning Any, so a
# faithful return of a Tensor reads as "returning Any" to mypy. Disabled
# deliberately for the torch-heavy serving engine rather than scattering
# ~dozens of casts; ruff + tests retain the mistype-detection role.
warn_return_any = false
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "src/eugene_plexus_inference/_generated",
]

[[tool.mypy.overrides]]
module = "eugene_plexus_inference._generated.*"
ignore_errors = true

# tokenizers ships no type stubs.
[[tool.mypy.overrides]]
module = ["tokenizers.*"]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
